# causalml

./: .gitignore  .readthedocs.yml  .travis.yml  ANTITRUST.md  CHARTER.md  CLAUDE.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  MANIFEST.in  Makefile  README.md  SECURITY.md  STEERING-COMMITTEE.md  STEERING_COMMITTEE.md  UpliftTreeClassifier.prof  environment-py36.yml  environment-py37.yml  environment-py38.yml  foober.yaml  pyproject.toml  requirements-test.txt  requirements-tf.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: black.yml  python-package.yml  python-publish.yml  python-test.yaml  test-build-from-source.yml  test-conda-forge-install.yaml  test-conda-forge-install.yml  test-conda-venv-install.yaml  test-conda-venv-install.yml  test-pypi-install.yaml  test-pypi-install.yml
causalml/: __init__.py  features.py  match.py  propensity.py
causalml/dataset/: __init__.py  classification.py  mab_simulation.py  regression.py  semiSynthetic.py  synthValidation.py  synthetic.py
causalml/feature_selection/: __init__.py  filters.py
causalml/inference/: serialization.py
causalml/metrics/: __init__.py  cate_scoring.py  classification.py  const.py  mab_evaluation.py  multiqini.py  rate.py  regression.py  sensitivity.py  synthetic.py  visualize.py
causalml/optimize/: __init__.py  bandit.py  pns.py  policylearner.py  unit_selection.py  utils.py  value_optimization.py
causalml/tests/: test_bandit.py
docs/: Makefile  about.rst  causalml.rst  changelog.rst  conf.py  environment-py311-rtd.yml  environment-py38-rtd.yml  environment-py39-rtd.yml  examples.rst  index.rst  installation.rst  interpretation.rst  issue-859-resolution.md  methodology.rst  quickstart.rst  references.rst  refs.bib  requirements-docs.txt  requirements.txt  validation.rst  visualization.rst
docs/examples/: benchmark_semi_synthetic_simulation_studies.ipynb  benchmark_simulation_studies.ipynb  benchmark_simulation_studies_synth_validation.ipynb  binary_policy_learner_example.ipynb  calibration.ipynb  causal_trees_interpretation.ipynb  cevae_example.ipynb  cevae_jax_vs_torch.ipynb  counterfactual_unit_selection.ipynb  counterfactual_value_optimization.ipynb  dr_learner_with_synthetic_data.ipynb  dragonnet_example.ipynb  (+13 more)
envs/: environment-py36.yml  environment-py37.yml  environment-py38.yml  environment-py39.yml  environment-tf-py36.yml  environment-tf-py37.yml  environment-tf-py38.yml  environment-tf-py39.yml
examples/: 001_meta_learners_with_synthetic_data.ipynb  002_uplift_trees_with_synthetic_data.ipynb  003_meta_learners_with_synthetic_data_multiple_treatment.ipynb  004_uplift_tree_visualization.ipynb  005_feature_interpretations_example.ipynb  006_validation_with_tmle.ipynb  007_dragonnet_example.ipynb  008_iv_nlsym_synthetic_data.ipynb  009_sensitivity_example_with_synthetic_data.ipynb  010_counterfactual_unit_selection.ipynb  011_counterfactual_value_optimization.ipynb  012_feature_selection.ipynb  013_binary_policy_learner_example.ipynb  014_cevae_example.ipynb  015_dr_learner_with_synthetic_data.ipynb  016_benchmark_simulation_studies.ipynb  017_necessary_and_sufficient.ipynb  019_causal_trees_interpretation.ipynb  Binary Policy Learner Example.ipynb  bart_with_synthetic_data.ipynb  benchmark_simulation_studies.ipynb  causal_trees_interpretation.ipynb  cevae_example.ipynb  counterfactual_unit_selection.ipynb  dr_learner_with_synthetic_data.ipynb  dragonnet_example.ipynb  example_notebook_for_github.ipynb  feature_importance_example_DEV.ipynb  feature_interpretations_example.ipynb  feature_selection.ipynb  ihdp_dataset_dragonnet_vs_metalearners.ipynb  logistic_regression_based_data_generation_for_uplift_classification.ipynb  meta_learners_with_synthetic_data.ipynb  meta_learners_with_synthetic_data_multiple_treatment.ipynb  sensitivity_example_with_synthetic_data.ipynb  uplift_tree_visualization.ipynb  uplift_trees_with_synthetic_data.ipynb  validation_with_tmle.ipynb
tests/: conftest.py  const.py  test_bandit.py  test_bart.py  test_cate_scoring.py  test_causal_trees.py  test_cevae.py  test_counterfactual_unit_selection.py  test_datasets.py  test_dragonnet.py  test_feature_selection.py  test_features.py  test_ivlearner.py  test_jax_cevae.py  test_jax_dragonnet.py  test_match.py  test_meta_learners.py  test_metrics.py  test_polars_support.py  test_propensity.py  test_rate.py  test_sensitivity.py  test_serialization.py  test_serialization_extended.py  test_uplift_trees.py  test_uplift_trees_kernel.py  test_utils.py  test_value_optimization.py  test_visualize.py
(+90 files in other folders)
