[project]
name = "causalml"
version = "0.15.1+torchless"
description = "Python Package for Uplift Modeling and Causal Inference with Machine Learning Algorithms"
readme = { file = "README.md", content-type = "text/markdown" }

authors = [
    { "name" = "Huigang Chen" },
    { "name" = "Totte Harinen" },
    { "name" = "Jeong-Yoon Lee" },
    { "name" = "Jing Pan" },
    { "name" = "Mike Yung" },
    { "name" = "Zhenyu Zhao" }
]
maintainers = [
    { name = "Jeong-Yoon Lee" }
]
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

requires-python = ">=3.7"
dependencies = [
    "forestci==0.6",
    "pathos==0.2.9",
    "pip>=10.0",
    "numpy>=1.18.5",
    "scipy>=1.4.1",
    "matplotlib",
    "pandas>=0.24.1",
    "scikit-learn>=0.22.0",
    "statsmodels>=0.9.0",
    "Cython<=0.29.34",
    "seaborn",
    "xgboost",
    "pydotplus",
    "tqdm",
    "shap",
    "dill",
    "lightgbm",
    "pygam",
    "packaging",
    "graphviz",
    "duecredit",
]

[project.optional-dependencies]
test = [
    "pytest>=4.6",
    "pytest-cov>=4.0"
]
tf = [
    "tensorflow>=2.4.0"
]
torch = [
    "torch",
    "pyro-ppl",
]


[build-system]
requires = [
    "setuptools>=18.0",
    "wheel",
    "Cython<=0.29.34",
    "numpy>=1.18.5",
    "scikit-learn>=0.22.0",
]

[project.urls]
homepage = "https://github.com/uber/causalml"

[tool.cibuildwheel]
build = ["cp38-*", "cp39-*", "cp310-*", "cp311-*"]
build-verbosity = 1
# Skip 32-bit builds
skip = ["*-win32", "*-manylinux_i686", "*-musllinux*"]
