[project]
name = "causalml"
version = "0.15.4"
description = "Python Package for Uplift Modeling and Causal Inference with Machine Learning Algorithms"
readme = { file = "README.md", content-type = "text/markdown" }

authors = [
    { "name" = "Huigang Chen" },
    { "name" = "Totte Harinen" },
    { "name" = "Jeong-Yoon Lee" },
    { "name" = "Jing Pan" },
    { "name" = "Mike Yung" },
    { "name" = "Zhenyu Zhao" }
]
maintainers = [
    { name = "Jeong-Yoon Lee" }
]
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

requires-python = ">=3.9"
dependencies = [
    "forestci==0.6",
    "pathos==0.2.9",
    "pip>=10.0",
    "numpy>=1.18.5",
    "scipy>=1.4.1",
    "matplotlib",
    "pandas>=0.24.1",
    "scikit-learn>=1.5.2",
    "statsmodels>=0.9.0",
    "Cython",
    "seaborn",
    "xgboost",
    "pydotplus",
    "tqdm",
    "shap",
    "dill",
    "lightgbm",
    "packaging",
    "graphviz",
]

[project.optional-dependencies]
test = [
    "pytest>=4.6",
    "pytest-cov>=4.0"
]
tf = [
    "tensorflow>=2.4.0"
]
torch = [
    "torch",
    "pyro-ppl"
]

[build-system]
requires = [
    "setuptools>=18.0",
    "wheel",
    "Cython",
    "numpy>=1.18.5",
    "scikit-learn>=0.22.0",
]

[project.urls]
homepage = "https://github.com/uber/causalml"

[tool.cibuildwheel]
build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*"]
build-verbosity = 1
# Skip 32-bit builds
skip = ["*-win32", "*-manylinux_i686", "*-musllinux*"]
